2-services/openshift-console/console.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-api
  namespace: kube-system
spec:
  selector:
    app: flannel
  ports:
  - port: 6443
    targetPort: 6443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openshift-console-deployment
  namespace: kube-system
  labels:
    app: openshift-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-console
  template:
    metadata:
      labels:
        app: openshift-console
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: openshift-console
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        image:  quay.io/openshift-release-dev/ocp-v4.0-art-dev@sha256:1bb1fa963906ac2841351e2e0da9aa7365314d85121fbd7bbb9582a0e3ca9522
---
apiVersion: v1
kind: Service
metadata:
  name: openshift-console-service
  namespace: kube-system
spec:
  selector:
    app: openshift-console
  ports:
  - port: 80
    targetPort: 9000
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: openshift-console
  namespace: kube-system
spec:
  to:
    kind: Service
    name: openshift-console-service
    weight: 100
  port:
    targetPort: 9000
  wildcardPolicy: None
